# notes-ai

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 110a984160ab_create_meetings_and_outbox_events.py  2b0d3b3c9d8f_normalize_meeting_status_and_add_processed_events.py
app/: main.py
app/api/: deps.py
app/api/v1/: health.py  meetings.py
app/core/: correlation.py  settings.py
app/db/: models.py  session.py
app/schemas/: common.py  events.py  meetings.py
app/workers/: meetings_worker.py  outbox_publisher.py
